# gnuplot-style

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  pre-commit.yml  release.yml
src/gnuplot_style/: __init__.py  api.py  constants.py  core.py  gnuplot.mplstyle
tests/: __init__.py  test_gnuplot_style.py  test_reference_gnuplot_style.py
