[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gnuplot-style"
version = "0.1.1"
description = "Gnuplot-style aesthetics for matplotlib"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Chi Zhao", email = "dandanv5@hotmail.com"},
]
keywords = ["matplotlib", "gnuplot", "plotting", "visualization", "style"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = [
    "matplotlib>=3.5.0",
    "numpy>=1.20.0",
    "cycler>=0.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=24.0",
    "isort>=5.12",
    "flake8>=7.0",
    "mypy>=1.0",
    "pre-commit>=3.0",
    "pydocstyle>=6.3",
]

[project.urls]
Homepage = "https://github.com/vectorsss/gnuplot-style"
Documentation = "https://github.com/vectorsss/gnuplot-style#readme"
Repository = "https://github.com/vectorsss/gnuplot-style"
Issues = "https://github.com/vectorsss/gnuplot-style/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
gnuplot_style = ["*.mplstyle"]

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.run]
source = ["src/gnuplot_style"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise AssertionError",
    "raise NotImplementedError",
]
